# yoyologger

./: CMakeLists.txt  LICENSE  README.md  build.sh
logger/: logger.cc  logger.hpp
src/: logger.hpp
test/: performance_test.cc  usage.cc
